home page updates and working inventory and projects links

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -19,181 +19,7 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [
-    {
-      "path": "scss/main.scss",
-      "imports": [
-        "scss/vendor/bootstrap.scss",
-        "bower_components/bootstrap/scss/_functions.scss",
-        "bower_components/bootstrap/scss/_variables.scss",
-        "bower_components/bootstrap/scss/_mixins.scss",
-        "bower_components/bootstrap/scss/_root.scss",
-        "bower_components/bootstrap/scss/_reboot.scss",
-        "bower_components/bootstrap/scss/_type.scss",
-        "bower_components/bootstrap/scss/_images.scss",
-        "bower_components/bootstrap/scss/_code.scss",
-        "bower_components/bootstrap/scss/_grid.scss",
-        "bower_components/bootstrap/scss/_tables.scss",
-        "bower_components/bootstrap/scss/_forms.scss",
-        "bower_components/bootstrap/scss/_buttons.scss",
-        "bower_components/bootstrap/scss/_transitions.scss",
-        "bower_components/bootstrap/scss/_dropdown.scss",
-        "bower_components/bootstrap/scss/_button-group.scss",
-        "bower_components/bootstrap/scss/_input-group.scss",
-        "bower_components/bootstrap/scss/_custom-forms.scss",
-        "bower_components/bootstrap/scss/_nav.scss",
-        "bower_components/bootstrap/scss/_navbar.scss",
-        "bower_components/bootstrap/scss/_card.scss",
-        "bower_components/bootstrap/scss/_breadcrumb.scss",
-        "bower_components/bootstrap/scss/_pagination.scss",
-        "bower_components/bootstrap/scss/_badge.scss",
-        "bower_components/bootstrap/scss/_jumbotron.scss",
-        "bower_components/bootstrap/scss/_alert.scss",
-        "bower_components/bootstrap/scss/_progress.scss",
-        "bower_components/bootstrap/scss/_media.scss",
-        "bower_components/bootstrap/scss/_list-group.scss",
-        "bower_components/bootstrap/scss/_close.scss",
-        "bower_components/bootstrap/scss/_modal.scss",
-        "bower_components/bootstrap/scss/_tooltip.scss",
-        "bower_components/bootstrap/scss/_popover.scss",
-        "bower_components/bootstrap/scss/_carousel.scss",
-        "bower_components/bootstrap/scss/_utilities.scss",
-        "bower_components/bootstrap/scss/_print.scss",
-        "scss/vendor/_custom.scss",
-        "bower_components/bootstrap/scss/mixins/_breakpoints.scss",
-        "bower_components/bootstrap/scss/mixins/_hover.scss",
-        "bower_components/bootstrap/scss/mixins/_image.scss",
-        "bower_components/bootstrap/scss/mixins/_badge.scss",
-        "bower_components/bootstrap/scss/mixins/_resize.scss",
-        "bower_components/bootstrap/scss/mixins/_screen-reader.scss",
-        "bower_components/bootstrap/scss/mixins/_size.scss",
-        "bower_components/bootstrap/scss/mixins/_reset-text.scss",
-        "bower_components/bootstrap/scss/mixins/_text-emphasis.scss",
-        "bower_components/bootstrap/scss/mixins/_text-hide.scss",
-        "bower_components/bootstrap/scss/mixins/_text-truncate.scss",
-        "bower_components/bootstrap/scss/mixins/_visibility.scss",
-        "bower_components/bootstrap/scss/mixins/_alert.scss",
-        "bower_components/bootstrap/scss/mixins/_buttons.scss",
-        "bower_components/bootstrap/scss/mixins/_caret.scss",
-        "bower_components/bootstrap/scss/mixins/_pagination.scss",
-        "bower_components/bootstrap/scss/mixins/_lists.scss",
-        "bower_components/bootstrap/scss/mixins/_list-group.scss",
-        "bower_components/bootstrap/scss/mixins/_nav-divider.scss",
-        "bower_components/bootstrap/scss/mixins/_forms.scss",
-        "bower_components/bootstrap/scss/mixins/_table-row.scss",
-        "bower_components/bootstrap/scss/mixins/_background-variant.scss",
-        "bower_components/bootstrap/scss/mixins/_border-radius.scss",
-        "bower_components/bootstrap/scss/mixins/_box-shadow.scss",
-        "bower_components/bootstrap/scss/mixins/_gradients.scss",
-        "bower_components/bootstrap/scss/mixins/_transition.scss",
-        "bower_components/bootstrap/scss/mixins/_clearfix.scss",
-        "bower_components/bootstrap/scss/mixins/_grid-framework.scss",
-        "bower_components/bootstrap/scss/mixins/_grid.scss",
-        "bower_components/bootstrap/scss/mixins/_float.scss",
-        "bower_components/bootstrap/scss/utilities/_align.scss",
-        "bower_components/bootstrap/scss/utilities/_background.scss",
-        "bower_components/bootstrap/scss/utilities/_borders.scss",
-        "bower_components/bootstrap/scss/utilities/_clearfix.scss",
-        "bower_components/bootstrap/scss/utilities/_display.scss",
-        "bower_components/bootstrap/scss/utilities/_embed.scss",
-        "bower_components/bootstrap/scss/utilities/_flex.scss",
-        "bower_components/bootstrap/scss/utilities/_float.scss",
-        "bower_components/bootstrap/scss/utilities/_position.scss",
-        "bower_components/bootstrap/scss/utilities/_screenreaders.scss",
-        "bower_components/bootstrap/scss/utilities/_shadows.scss",
-        "bower_components/bootstrap/scss/utilities/_sizing.scss",
-        "bower_components/bootstrap/scss/utilities/_spacing.scss",
-        "bower_components/bootstrap/scss/utilities/_text.scss",
-        "bower_components/bootstrap/scss/utilities/_visibility.scss"
-      ]
-    },
-    {
-      "path": "scss/vendor/bootstrap.scss",
-      "imports": [
-        "scss/vendor/_custom.scss",
-        "bower_components/bootstrap/scss/_functions.scss",
-        "bower_components/bootstrap/scss/_variables.scss",
-        "bower_components/bootstrap/scss/_mixins.scss",
-        "bower_components/bootstrap/scss/_root.scss",
-        "bower_components/bootstrap/scss/_reboot.scss",
-        "bower_components/bootstrap/scss/_type.scss",
-        "bower_components/bootstrap/scss/_images.scss",
-        "bower_components/bootstrap/scss/_code.scss",
-        "bower_components/bootstrap/scss/_grid.scss",
-        "bower_components/bootstrap/scss/_tables.scss",
-        "bower_components/bootstrap/scss/_forms.scss",
-        "bower_components/bootstrap/scss/_buttons.scss",
-        "bower_components/bootstrap/scss/_transitions.scss",
-        "bower_components/bootstrap/scss/_dropdown.scss",
-        "bower_components/bootstrap/scss/_button-group.scss",
-        "bower_components/bootstrap/scss/_input-group.scss",
-        "bower_components/bootstrap/scss/_custom-forms.scss",
-        "bower_components/bootstrap/scss/_nav.scss",
-        "bower_components/bootstrap/scss/_navbar.scss",
-        "bower_components/bootstrap/scss/_card.scss",
-        "bower_components/bootstrap/scss/_breadcrumb.scss",
-        "bower_components/bootstrap/scss/_pagination.scss",
-        "bower_components/bootstrap/scss/_badge.scss",
-        "bower_components/bootstrap/scss/_jumbotron.scss",
-        "bower_components/bootstrap/scss/_alert.scss",
-        "bower_components/bootstrap/scss/_progress.scss",
-        "bower_components/bootstrap/scss/_media.scss",
-        "bower_components/bootstrap/scss/_list-group.scss",
-        "bower_components/bootstrap/scss/_close.scss",
-        "bower_components/bootstrap/scss/_modal.scss",
-        "bower_components/bootstrap/scss/_tooltip.scss",
-        "bower_components/bootstrap/scss/_popover.scss",
-        "bower_components/bootstrap/scss/_carousel.scss",
-        "bower_components/bootstrap/scss/_utilities.scss",
-        "bower_components/bootstrap/scss/_print.scss",
-        "bower_components/bootstrap/scss/mixins/_breakpoints.scss",
-        "bower_components/bootstrap/scss/mixins/_hover.scss",
-        "bower_components/bootstrap/scss/mixins/_image.scss",
-        "bower_components/bootstrap/scss/mixins/_badge.scss",
-        "bower_components/bootstrap/scss/mixins/_resize.scss",
-        "bower_components/bootstrap/scss/mixins/_screen-reader.scss",
-        "bower_components/bootstrap/scss/mixins/_size.scss",
-        "bower_components/bootstrap/scss/mixins/_reset-text.scss",
-        "bower_components/bootstrap/scss/mixins/_text-emphasis.scss",
-        "bower_components/bootstrap/scss/mixins/_text-hide.scss",
-        "bower_components/bootstrap/scss/mixins/_text-truncate.scss",
-        "bower_components/bootstrap/scss/mixins/_visibility.scss",
-        "bower_components/bootstrap/scss/mixins/_alert.scss",
-        "bower_components/bootstrap/scss/mixins/_buttons.scss",
-        "bower_components/bootstrap/scss/mixins/_caret.scss",
-        "bower_components/bootstrap/scss/mixins/_pagination.scss",
-        "bower_components/bootstrap/scss/mixins/_lists.scss",
-        "bower_components/bootstrap/scss/mixins/_list-group.scss",
-        "bower_components/bootstrap/scss/mixins/_nav-divider.scss",
-        "bower_components/bootstrap/scss/mixins/_forms.scss",
-        "bower_components/bootstrap/scss/mixins/_table-row.scss",
-        "bower_components/bootstrap/scss/mixins/_background-variant.scss",
-        "bower_components/bootstrap/scss/mixins/_border-radius.scss",
-        "bower_components/bootstrap/scss/mixins/_box-shadow.scss",
-        "bower_components/bootstrap/scss/mixins/_gradients.scss",
-        "bower_components/bootstrap/scss/mixins/_transition.scss",
-        "bower_components/bootstrap/scss/mixins/_clearfix.scss",
-        "bower_components/bootstrap/scss/mixins/_grid-framework.scss",
-        "bower_components/bootstrap/scss/mixins/_grid.scss",
-        "bower_components/bootstrap/scss/mixins/_float.scss",
-        "bower_components/bootstrap/scss/utilities/_align.scss",
-        "bower_components/bootstrap/scss/utilities/_background.scss",
-        "bower_components/bootstrap/scss/utilities/_borders.scss",
-        "bower_components/bootstrap/scss/utilities/_clearfix.scss",
-        "bower_components/bootstrap/scss/utilities/_display.scss",
-        "bower_components/bootstrap/scss/utilities/_embed.scss",
-        "bower_components/bootstrap/scss/utilities/_flex.scss",
-        "bower_components/bootstrap/scss/utilities/_float.scss",
-        "bower_components/bootstrap/scss/utilities/_position.scss",
-        "bower_components/bootstrap/scss/utilities/_screenreaders.scss",
-        "bower_components/bootstrap/scss/utilities/_shadows.scss",
-        "bower_components/bootstrap/scss/utilities/_sizing.scss",
-        "bower_components/bootstrap/scss/utilities/_spacing.scss",
-        "bower_components/bootstrap/scss/utilities/_text.scss",
-        "bower_components/bootstrap/scss/utilities/_visibility.scss"
-      ]
-    }
-  ],
+  "imports": [],
   "projectView": {
     "selectedView": "file-tree"
   },
